--- a/doc/abstract.tex
+++ b/doc/abstract.tex
@@ -2,10 +2,10 @@
 
 \begin{abstract}
 
-In this paper, we evaluated the performance of Nearest Neighbour and Support Vector Machine as images classifier, using Bag of Word model. Different metric functions and different kernel functions were taken into account. With regard to features quantization, we have focused our attention to soft-assignment and truncated soft-assignment, in comparison to hard-assignment.
+In this paper, we evaluated the performance of Nearest Neighbor and Support Vector Machine as images classifier, using Bag of Word model. Different metric functions and different kernel functions were taken into account. With regard to feature quantization, we have focused our attention to soft-assignment and truncated soft-assignment, in comparison to hard-assignment.
 
 \end{abstract}
 
 %%%%% KEYWORDS %%%%
 
-{\footnotesize \noindent\textbf{Keywords} - Bag of Words (BoW), SIFT, SVM, Nearest Neighbours, Hard-Soft Assignment}.
+{\footnotesize \noindent\textbf{Keywords} - Bag of Words (BoW), SIFT, SVM, Nearest Neighbor, Hard-Soft Assignment}.
