--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -1,8 +1,8 @@
 \section{Introduction}
 
-In computer vision, the \emph{bag-of-words} model is one of the well established image classification methods. Not only comparing two image by matching each local features of the images is computationally intensive, but also different images have different number of local features. BoW model simplified this process by building a vocabulary of visual-words, called codebook. This way, an image descriptor is a histogram built by counting how many codewords are present in an image.
+In computer vision, the \emph{bag-of-words} model is well established image representation method. Not only comparing two image by matching each local features of the images is computationally intensive, but also different images have different number of local features. BoW model simplified this process by building a vocabulary of visual-words, called codebook. This way, an image descriptor is a histogram built by counting how many codewords are present in an image.
 
-Given this model for image classification, we have compared how different classifiers performs.
+Given this model, regarding image classification, we have compared how different classifiers performs.
 We have studied the \emph{Nearest-Neighbor} (NN) classifier, comparing the results using both the Euclidean distance and the $\chi^2$ distance.
 
 In addiction, we have examined the \emph{Support Vector Machine} (SVM) classifier, implementing different kernel functions; in particular, the linear kernel, the intersection kernel, the $\chi^2$ kernel, and the radial basis function kernel have been implemented.
